// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetRunResult should render save placeholder when value prop passed 1`] = `
<div>
  Save 
  Grace
   as 
  <span
    className="emph"
  >
    Name
  </span>
</div>
`;

exports[`SetRunResult should render with clear placholder when value prop isn't passed 1`] = `
<div>
  Clear value for 
  <span
    className="emph"
  >
    Name
  </span>
</div>
`;
